updated ladderhead page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html class="background-dark">
 
 <head>
   <title>Karolis Dikcius Official Web Page</title>
   <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
-<body>
+<body class="body-dark">
   <h1>
     I have made video games in the past
   </h1>
