--- a/ladderhead.html
+++ b/ladderhead.html
@@ -1,25 +1,45 @@
 <!DOCTYPE html>
-<html>
+<html class="background-light">
 
 <head>
   <title>Ladderhead</title>
   <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
-<body>
+<body class="body-light">
   <h1>
     Ladderhead
   </h1>
-  <img src="img/underconstruction2.gif" alt="under construction">
-  <img src="img/underconstruction2.gif" alt="under construction">
-  <img src="img/underconstruction2.gif" alt="under construction">
+
   <p>
-    Ladderhead is a work in progress. I do not feel it is time to share more about it but I can tell you this much - it is a
-    text adventure about a man in trouble.
+    <i>“‘Ladderhead’ is a game about a man in trouble.”</i>&nbsp-&nbspKarolis Dikcius
   </p>
+
+  <img src="img/ladderhead/1.png" class="game-art">
+  <img src="img/ladderhead/2.png" class="game-art">
+
+  <p>
+    My next game, Ladderhead, will tell the story about a man bound to a time and a place in the aether. Seeking your
+    loved one you will traverse a curious building, each floor being a perilous mystery. Every time you die the day
+    resets.
+  </p>
+
+  <img src="img/ladderhead/3.png" class="game-art">
+  <img src="img/ladderhead/4.png" class="game-art">
+
   <img src="img/underconstruction1.gif" alt="under construction">
+
+  <p>
+    Ladderhead is a work in progress. It will come out some time this year.
+  </p>
+
+  <!-- <img src="img/underconstruction2.gif" alt="under construction">
+  <img src="img/underconstruction2.gif" alt="under construction">
+  <img src="img/underconstruction2.gif" alt="under construction"> -->
+  <img src="img/underconstruction1.gif" alt="under construction">
+
   <a href="index.html">
-    <img src="img/back.gif" alt="back" class="breakinglineimg">
+    <img src="img/back-light.gif" alt="back" class="breaking-line-img">
   </a>
 </body>
 
