--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html class="background-dark">
 
 <head>
-  <title>Karolis Dikcius Official Web Page</title>
+  <title>Karolis Dikcius Personal Web Page</title>
   <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
+
 
 <body class="body-dark">
   <h1>
     I have made video games in the past
   </h1>
+  <img src="img/me.jpg" alt="me" class="photo">
   <p>
     You have reached the personal web page of visionary computer game maker Karolis Dikcius, best known for hit games
     such as <a href="desertofvice.html">Desert of Vice</a>. I am based in Vilnius, Lithuania and I have been doing whatever I have been doing since 1995.
