--- a/ladderhead.html
+++ b/ladderhead.html
@@ -33,6 +33,11 @@
     Ladderhead is a work in progress. It will come out some time this year.
   </p>
 
+  <p>
+    On the 2nd & 3rd of November, 2019, Ladderhead will be exhibited at AdventureX, London.
+  </p>
+
+  <img src="img/ladderhead/advx.png" alt="adventurex" class="small-photo">
   <!-- <img src="img/underconstruction2.gif" alt="under construction">
   <img src="img/underconstruction2.gif" alt="under construction">
   <img src="img/underconstruction2.gif" alt="under construction"> -->
