--- a/desertofvice.html
+++ b/desertofvice.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html class="background-dark">
+<link rel="icon" type="image/png" href="favicon.png">
 
 <head>
   <title>Desert of Vice</title>
