--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html class="background-dark">
+<link rel="icon" type="image/png" href="favicon.png">
 
 <head>
   <title>Karolis Dikcius Personal Web Page</title>
@@ -13,7 +14,7 @@
   </h1>
   <img src="img/me.jpg" alt="me" class="photo">
   <p>
-    You have reached the personal web page of visionary computer game maker Karolis Dikcius, best known for hit games
+    You have reached the personal web page of the visionary computer game maker Karolis Dikcius, best known for games
     such as <a href="desertofvice.html">Desert of Vice</a>. I am based in Vilnius, Lithuania and I have been doing whatever I have been doing since 1995.
   </p>
   <p>
