--- a/ladderhead.html
+++ b/ladderhead.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html class="background-light">
+<link rel="icon" type="image/png" href="favicon.png">
 
 <head>
   <title>Ladderhead</title>
@@ -12,20 +13,64 @@
   </h1>
 
   <p>
-    <i>“‘Ladderhead’ is a game about a man in trouble.”</i>&nbsp-&nbspKarolis Dikcius
+    <i>“An avant-garde, parser-driven story of purgatory and lost love, [...] darkly comedic and very strange – Lynchian at times...”</i> -&nbsp<a class="a-light" href="http://adventurexpo.org/exhibitors-2019/">AdventureX</a>
+  </p>
+
+  <p>
+    <i>“‘Ladderhead’ is a game about a man in trouble.”</i> -&nbspKarolis Dikcius
   </p>
 
   <img src="img/ladderhead/1.png" class="game-art">
   <img src="img/ladderhead/2.png" class="game-art">
 
   <p>
-    My next game, Ladderhead, will tell the story about a man bound to a time and a place in the aether. Seeking your
-    loved one you will traverse a curious building, each floor being a perilous mystery. Every time you die the day
-    resets.
+    My next game, Ladderhead, will be a surreal narrative focused roguelite text adventure. In it you will play a man 
+    stuck in the same day who has to get to the top floor of an unusual building to find his loved one. Each floor is a 
+    perilous mystery to unravel. Each time you die the day resets.
+  </p>
+
+  <p>
+    The game will feature two ways of interaction - typing the commands manually and optionally tabbing through some of them.   
   </p>
 
   <img src="img/ladderhead/3.png" class="game-art">
   <img src="img/ladderhead/4.png" class="game-art">
+
+  <p>
+    Features:
+  </p>
+
+  <p>
+    <ul>
+      <li>Time travel mechanics in a text adventure</li>
+      <li>A tailor-made soundtrack by <a class="a-light" href="https://twitter.com/cesque">@cesque</a></li>
+      <li>A unique art style</li>
+      <li>A story</li>
+    </ul>
+  </p>
+
+  <p>
+      Ladderhead will be available on the following platforms:
+    </p>
+    <a href="" title="itch.io">
+      <img src="img/itch.gif" alt="back">
+    </a>
+    <a href="https://store.steampowered.com/app/1047800/Ladderhead/" title="steam">
+      <img src="img/steam.gif" alt="back">
+    </a>
+    <a href="" title="iphone">
+      <img src="img/ios.gif" alt="back">
+    </a>
+    <a href="" title="android">
+      <img src="img/android.gif" alt="back">
+    </a>
+  </p>
+
+  <p>
+    On the 2nd & 3rd of November, 2019, Ladderhead was exhibited at AdventureX, London.
+  </p>
+
+  <img src="img/ladderhead/advx.png" alt="adventurex" class="small-photo" text-align="center"/>
 
   <img src="img/underconstruction1.gif" alt="under construction">
 
@@ -33,14 +78,6 @@
     Ladderhead is a work in progress. It will come out some time this year.
   </p>
 
-  <p>
-    On the 2nd & 3rd of November, 2019, Ladderhead will be exhibited at AdventureX, London.
-  </p>
-
-  <img src="img/ladderhead/advx.png" alt="adventurex" class="small-photo">
-  <!-- <img src="img/underconstruction2.gif" alt="under construction">
-  <img src="img/underconstruction2.gif" alt="under construction">
-  <img src="img/underconstruction2.gif" alt="under construction"> -->
   <img src="img/underconstruction1.gif" alt="under construction">
 
   <a href="index.html">
