ladderhead itch link

--- a/ladderhead.html
+++ b/ladderhead.html
@@ -50,9 +50,9 @@
   </p>
 
   <p>
-      Ladderhead will be available on the following platforms:
+      Ladderhead will come out with the price of $2.99 on the following platforms on Friday the 13th, December, 2019:
     </p>
-    <a href="" title="itch.io">
+    <a href="https://karolisd.itch.io/ladderhead" title="itch.io">
       <img src="img/itch.gif" alt="back">
     </a>
     <a href="https://store.steampowered.com/app/1047800/Ladderhead/" title="steam">
