--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <img src="img/me.jpg" alt="me" class="photo">
   <p>
     You have reached the personal web page of the visionary computer game maker Karolis Dikcius, best known for games
-    such as <a href="desertofvice.html">Desert of Vice</a> & <a href="ladderhead.html">Ladderhead</a>.. I am based in Vilnius, Lithuania and I have been doing whatever I have been doing since 1995.
+    such as <a href="desertofvice.html">Desert of Vice</a> & <a href="ladderhead.html">Ladderhead</a>. I am based in Vilnius, Lithuania and I have been doing whatever I have been doing since 1995.
   </p>
   <p>
     When I am not making games I enjoy reading literature, watching films and taking my dog on a walk. In the past I have also enjoyed making analog electric
