--- a/ladderhead.html
+++ b/ladderhead.html
@@ -34,7 +34,7 @@
   </p>
 
   <p>
-    The game feature two ways of interaction - typing the commands manually and optionally tabbing through them.   
+    The game features two ways of interaction - typing the commands manually and optionally tabbing through them.   
   </p>
 
   <img src="img/ladderhead/3.png" class="game-art">
