--- a/desertofvice.html
+++ b/desertofvice.html
@@ -45,16 +45,16 @@
     Desert of Vice is available on the following platforms:
   </p>
   <a href="https://karolisd.itch.io/desert-of-vice" title="itch.io">
-    <img src="img/itch.gif" alt="back">
+    <img src="img/itch.gif" alt="itch.io">
   </a>
   <a href="https://store.steampowered.com/app/796370/Desert_of_Vice" title="steam">
-    <img src="img/steam.gif" alt="back">
+    <img src="img/steam.gif" alt="steam">
   </a>
   <a href="https://itunes.apple.com/us/app/desert-of-vice/id1272238004" title="iphone">
-    <img src="img/ios.gif" alt="back">
+    <img src="img/ios.gif" alt="ios">
   </a>
   <a href="https://play.google.com/store/apps/details?id=com.gmail.dikcius.karolis.Desert_of_Vice" title="android">
-    <img src="img/android.gif" alt="back">
+    <img src="img/android.gif" alt="android">
   </a>
   <p>
     This game was made over the course of 1&nbsp½ years by a single developer and won the Indie Prize for Best Game Narrative
