--- a/ladderhead.html
+++ b/ladderhead.html
@@ -57,16 +57,16 @@
       Ladderhead has come out with the price of $2.99 on the following platforms on Friday the 13th, December, 2019:
     </p>
     <a href="https://karolisd.itch.io/ladderhead" title="itch.io">
-      <img src="img/itch.gif" alt="back">
+      <img src="img/itch.gif" alt="itch.io">
     </a>
     <a href="https://store.steampowered.com/app/1047800/Ladderhead/" title="steam">
-      <img src="img/steam.gif" alt="back">
+      <img src="img/steam.gif" alt="steam">
     </a>
     <a href="https://apps.apple.com/us/app/ladderhead/id1485316080" title="iphone">
-      <img src="img/ios.gif" alt="back">
+      <img src="img/ios.gif" alt="ios">
     </a>
     <a href="https://play.google.com/store/apps/details?id=com.karolisdikcius.ladderhead" title="android">
-      <img src="img/android.gif" alt="back">
+      <img src="img/android.gif" alt="android">
     </a>
   </p>
 
