--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     guitar effect circuits.
   </p>
   <p>
-    My most recent project is <a href="www.youtube.com/watch?v=7MIevSvUphk">A Closetful of Scares</a>, a horror short co-written/co-directed with a good friend. It's about a man in trouble and it's in early post production.
+    My most recent project is <a href="https://www.youtube.com/watch?v=7MIevSvUphk">A Closetful of Scares</a>, a horror short co-written/co-directed with a good friend. It's about a man in trouble and it's in early post production.
   </p>
   <a href="mailto:karolis.dikcius@gmail.com">
     <img src="img/email.gif" alt="contact me">
