--- a/ladderhead.html
+++ b/ladderhead.html
@@ -71,10 +71,12 @@
   </p>
 
   <p>
-    On the 2nd & 3rd of November, 2019, Ladderhead was exhibited at AdventureX, London.
+    On the 2nd & 3rd of November, 2019, Ladderhead was exhibited at AdventureX, London. It was also nominated (but lost) for Best PC Game at LT Game Awards 2020.
   </p>
 
   <img src="img/ladderhead/advx.png" alt="adventurex" class="small-photo" text-align="center"/>
+  
+  <img src="img/ladderhead/ltgameawards.png" alt="ltgameawards" class="small-photo" text-align="center"/>
 
   <a href="index.html">
     <img src="img/back-light.gif" alt="back" class="breaking-line-img">
