--- a/strangeaeons.html
+++ b/strangeaeons.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="background-dark">
+<html class="background-strange-aeons">
 <link rel="icon" type="image/png" href="favicon.png">
 
 <head>
@@ -7,17 +7,23 @@
   <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
-<body class="body-dark">
+<body class="body-strange-aeons">
   <h1>
     Strange Aeons
   </h1>
   <img src="img/strangeaeons/1.png" class="game-art">
   <img src="img/strangeaeons/2.png" class="game-art">
   <p>
-    Strange Aeons is a game where you escape a cyber-hell as you chat with a neural net AI. The only way to interact is through your microphone.
+    Strange Aeons is an upcoming game where you escape a cyber-hell as you chat with a neural net AI. The only way to interact is through your microphone.
   </p>
   <p>
-    It's all very, very cool.
+    The followers of your cult are summoning you. You must escape this netherworld and reign in your rightful domain in the land of the living. To do so you must converse with the strange entities that surround you.
+  </p>
+  <p>
+    This is a neural-net-AI, speech-to-text and text-to-speech powered experience. All of this works offline, without a back-end server or internet connectivity.
+  </p>
+  <p>
+    It's all very, very cool. (& it's powered by the Godot engine)
   </p>
   <img src="img/strangeaeons/3.png" class="game-art">
   <img src="img/strangeaeons/4.png" class="game-art">
@@ -27,20 +33,20 @@
   <ul>
     <li>Chatting with an AI through the microphone.</li>
     <li>Inferno, by Dante Alighieri.</li>
-    <li>A 10 minute demo.</li>
+    <li>Optional typing input.</li>
   </ul>
   <p>
     Planned features:
   </p>
   <ul>
-    <li>Procedural language generation by <a class="a-light" href="https://twitter.com/cesque">@cesque</a>.</li>
+    <li>Procedural language generation by <a class="a-dark" href="https://twitter.com/cesque">@cesque</a>.</li>
     <li>Out of the box Linux support.</li>
     <li>MacOS support.</li>
     <li>VR support.</li>
     <li>Making the game even more high concept.</li>
   </ul>
   <p>
-    Strange Aeons is a work in progress. Play the demo on Itch.io:
+    You can play the first 30 minutes on Itch.io:
   </p>
   <a href="https://karolisd.itch.io/strange-aeons" title="itch.io">
     <img src="img/itch.gif" alt="itch.io">
