--- a/strangeaeons.html
+++ b/strangeaeons.html
@@ -32,6 +32,7 @@
   </p>
   <ul>
     <li>Chatting with an AI through the microphone.</li>
+    <li>Optional VR (Oculus on Windows).</li>
     <li>Inferno, by Dante Alighieri.</li>
     <li>Optional typing input.</li>
   </ul>
@@ -42,7 +43,6 @@
     <li>Procedural language generation by <a class="a-dark" href="https://twitter.com/cesque">@cesque</a>.</li>
     <li>Out of the box Linux support.</li>
     <li>MacOS support.</li>
-    <li>VR support.</li>
     <li>Making the game even more high concept.</li>
   </ul>
   <p>
