a closetful of scares

--- a/ladderhead.html
+++ b/ladderhead.html
@@ -21,7 +21,7 @@
   </p>
 
   <p>
-    <i>“‘Ladderhead’ is a game about a man in trouble.”</i> -&nbspKarolis Dikcius
+    <i>“‘Ladderhead’ is a game about a man in trouble.”</i>
   </p>
 
   <img src="img/ladderhead/1.png" class="game-art">
