--- a/strangeaeons.html
+++ b/strangeaeons.html
@@ -31,10 +31,10 @@
     Current features:
   </p>
   <ul>
-    <li>Chatting with an AI through the microphone.</li>
+    <li>Chatting with an AI through the microphone or keyboard.</li>
     <li>Optional VR (Oculus on Windows).</li>
     <li>Inferno, by Dante Alighieri.</li>
-    <li>Optional typing input.</li>
+    <li>Procedurally generated music.</li>
   </ul>
   <p>
     Planned features:
