small text updates

--- a/aclosetfulofscares.html
+++ b/aclosetfulofscares.html
@@ -21,7 +21,7 @@
   <iframe src="https://player.vimeo.com/video/455228966?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="480" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="A workprint snippet"></iframe>
 
   <p>
-    <i>A Closetful of Scares</i> is an upcoming short film co-written/co-directed by Mantas Narkevičius and Karolis Dikčius. It was shot in 4:3 color and B&W in Autumn of 2020 and is expected to be released around Halloween 2021.
+    <i>A Closetful of Scares</i> is an upcoming short film co-written/co-directed by Mantas Narkevičius and Karolis Dikčius. It was shot in 4:3 in color and in B&W in Autumn of 2020 and is expected to be released around Halloween 2021.
   </p>
 
   <p>
