--- a/aclosetfulofscares.html
+++ b/aclosetfulofscares.html
@@ -9,9 +9,7 @@
 
 <body class="body-acos">
   <h1>
-    <!-- <img src="img/moon25.gif"> -->
       A Closetful of Scares
-    <!-- <img src="img/moon25.gif"> -->
   </h1>
 
   <p>
@@ -25,7 +23,7 @@
   </p>
 
   <p>
-    Click below to see a really cool making of series:
+    Click below to see a making of series:
   </p>
   
   <a href="https://www.youtube.com/watch?v=RZ-8mfA_8fY&list=PLaujItVMDD_Y0kos7PUBeo_wmtl6U8F6v" title="Making of">
