strange aeons update

--- a/strangeaeons.html
+++ b/strangeaeons.html
@@ -28,32 +28,22 @@
   <img src="img/strangeaeons/3.png" class="game-art">
   <img src="img/strangeaeons/4.png" class="game-art">
   <p>
-    Current features:
+    Features:
   </p>
   <ul>
-    <li>Chatting with an AI through the microphone or keyboard.</li>
-    <li>Optional VR (Oculus on Windows).</li>
-    <li>Inferno, by Dante Alighieri.</li>
-    <li>Procedurally generated music.</li>
+    <li>Microphone & keyboard controls.</li>
+    <li>Neural Net AI.</li>
+    <li>Procedural music generation.</li>
     <li>Procedural language generation by <a class="a-dark" href="https://twitter.com/cesque">@cesque</a>.</li>
   </ul>
   <p>
-    Planned features:
-  </p>
-  <ul>
-    <li>Making the game even more high concept.</li>
-  </ul>
-  <p>
-    You can play the first 30 minutes on Itch.io:
-  </p>
-  <a href="https://karolisd.itch.io/strange-aeons" title="itch.io">
-    <img src="img/itch.gif" alt="itch.io">
-  </a>
-  <p>
-    Wishlist on Steam:
+    Wishlist & play the demo:
   </p>
   <a href="https://store.steampowered.com/app/1290960/Strange_Aeons" title="steam">
     <img src="img/steam.gif" alt="steam">
+  </a>
+  <a href="https://karolisd.itch.io/strange-aeons" title="itch.io">
+    <img src="img/itch.gif" alt="itch.io">
   </a>
   <p>
   </p>
