--- a/strangeaeons.html
+++ b/strangeaeons.html
@@ -14,16 +14,16 @@
   <img src="img/strangeaeons/1.png" class="game-art">
   <img src="img/strangeaeons/2.png" class="game-art">
   <p>
-    Strange Aeons is an upcoming game where you escape a cyber-hell as you chat with a neural net AI. The only way to interact is through your microphone.
+    Strange Aeons is a microphone-controlled game set in a cyber-hell and made with a gnostic mindset.
   </p>
   <p>
-    The followers of your cult are summoning you. You must escape this netherworld and reign in your rightful domain in the land of the living. To do so you must converse with the strange entities that surround you.
+    You are stuck in a gnostic cyber-hell. The followers of your cult are summoning you. Chat with a neural net AI through the microphone to escape hell and return to the land of the living. Engage in a strange ritual and figure out why you were banished and cast out to hell in the first place.
   </p>
   <p>
     This is a neural-net-AI, speech-to-text and text-to-speech powered experience. All of this works offline, without a back-end server or internet connectivity.
   </p>
   <p>
-    It's all very, very cool. (& it's powered by the Godot engine)
+    It's all very, very cool (& it's powered by the <a class="a-dark"  href="https://godotengine.org/">Godot engine</a>).
   </p>
   <img src="img/strangeaeons/3.png" class="game-art">
   <img src="img/strangeaeons/4.png" class="game-art">
@@ -31,13 +31,14 @@
     Features:
   </p>
   <ul>
-    <li>Microphone & keyboard controls.</li>
-    <li>Neural Net AI.</li>
-    <li>Procedural music generation.</li>
-    <li>Procedural language generation by <a class="a-dark" href="https://twitter.com/cesque">@cesque</a>.</li>
+    <li>Microphone & Keyboard controls</li>
+    <li>Neural Net AI</li>
+    <li>Procedural music</li>
+    <li>Imaginary languages by <a class="a-dark" href="https://twitter.com/cesque">@cesque</a></li>
+    <li>Optional VR mode</li>
   </ul>
   <p>
-    Wishlist & play the demo:
+    Play the game:
   </p>
   <a href="https://store.steampowered.com/app/1290960/Strange_Aeons" title="steam">
     <img src="img/steam.gif" alt="steam">
@@ -46,9 +47,11 @@
     <img src="img/itch.gif" alt="itch.io">
   </a>
   <p>
+    On May 10-12 2023, Strange Aeons was exhibited at A MAZE 2023, Berlin.
   </p>
+  <img src="img/strangeaeons/a_maze_honorablemention.png" alt="amaze" class="small-photo" text-align="center"/>
   <a href="index.html">
-    <img src="img/back-dark.gif" alt="back">
+    <img src="img/back-dark.gif" alt="back" class="breaking-line-img">
   </a>
 </body>
 
