--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     guitar effect circuits.
   </p>
   <p>
-    My most recent project is <a href="aclosetfulofscares.html">A Closetful of Scares</a>, a horror short co-written/co-directed with a good friend. It's about a man in trouble and it's in late post production.
+    My most recent project is <a href="strangeaeons.html">Strange Aeons</a>, a microphone-controlled horror game about escaping a gnostic cyber-hell. You can see the full list of my works <a href="works.html">right here</a>.
   </p>
   <a href="mailto:karolis.dikcius@gmail.com">
     <img src="img/email.gif" alt="contact me">
