--- a/strangeaeons.html
+++ b/strangeaeons.html
@@ -46,6 +46,9 @@
   <a href="https://karolisd.itch.io/strange-aeons" title="itch.io">
     <img src="img/itch.gif" alt="itch.io">
   </a>
+  <a href="https://www.gog.com/en/game/strange_aeons" title="gog.com">
+    <img src="img/gog.gif" alt="gog.com">
+  </a>
   <p>
     On May 10-12 2023, Strange Aeons was exhibited at A MAZE 2023, Berlin.
   </p>
