a closetful of scares description fix

--- a/aclosetfulofscares.html
+++ b/aclosetfulofscares.html
@@ -19,11 +19,11 @@
   <iframe src="https://player.vimeo.com/video/455228966?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="480" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="A workprint snippet"></iframe>
 
   <p>
-    <i>A Closetful of Scares</i> is a short film co-written/co-directed by Mantas Narkevičius and Karolis Dikčius. It's shot in 4:3 in color and you can check it out right here:
+    <i>A Closetful of Scares</i> is a short film co-written/co-directed by Mantas Narkevičius and Karolis Dikčius. It's shot in 4:3 in B&W and in color and you can check it out right here:
   </p>
   
   <a href="https://youtu.be/VdqWjlXJtEg?si=Q3hdgPMbrJuN2KMC" title="Film link">
-    <img src="img/previous_tenant.gif" alt="Making of series by Mantas Narkevičius">
+    <img src="img/previous_tenant.gif" alt="Film link">
   </a>
 
   <p>
